updated redirect routes for china europe and usa

--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -19,7 +19,7 @@
     <div class="columns">
 			<div class="section">
 				<p>
-					Thank you for agreeing to participate as a speaker at LendIt Europe 2015 (link to lendit.co/europe). This page will provide you with some general information and instructions to help you prepare for the conference.
+					Thank you for agreeing to participate as a speaker at <a href="/europe/2015">LendIt Europe 2015</a>. We have created this Speaker Information page to provide you with details and instructions to help you prepare for the conference.  We will be updating this page with additional information as we get closer to the event; you will be notified by email when we make any changes.
 				</p>
 				<p>
 					This page will be updated as we get closer to the event. You will be notified by email when we make any changes.
@@ -84,7 +84,7 @@
 			</p>
 			</div>
 
-			
+
 
       <h2>Other Information</h2>
 			<p>
