--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -19,24 +19,57 @@
     <div class="columns">
 			<div class="section">
 				<p>
-					Thank you for agreeing to participate as a speaker at <a href="/europe/2015">LendIt Europe 2015</a>. We have created this Speaker Information page to provide you with details and instructions to help you prepare for the conference.  We will be updating this page with additional information as we get closer to the event; you will be notified by email when we make any changes.
+					Thank you for agreeing to participate as a speaker at <a href="/europe/2015">LendIt Europe 2015</a>. We have created this Speaker Information page to provide you with details and instructions to help you prepare for the conference. We will be updating this page with additional information as we get closer to the event; you will be notified by email when we make any changes.
 				</p>
 				<p>
-					This page will be updated as we get closer to the event. You will be notified by email when we make any changes.
-				</p>
-				<p>
-					In the meantime, please feel free to contact any of the LendIt team members listed below if you have any questions or need assistance. We look forward to seeing you in October!
+					Please bookmark this page for quick reference and feel free to contact any of the LendIt team members listed below if you have any questions or need assistance. We look forward to seeing you in October!
 				</p>
 			</div>
 
 			<div class="section">
-				<h2>General Information</h2>
-				<h5> Conference Dates and Location: </h5>
+				<h2>Bio and Headshot</h2>
+				<ul>
+					<li>Your bio: 100 words or less, please include your full name, company, and title</li>
+					<li>Your headshot: high-resolution, print-quality JPEG - 4”x6” or larger at 300 dpi</li>
+					<li>Your mobile number</li>
+					<li>Your company's Twitter handle</li>
+					<li>Your personal Twitter handle</li>
+				</ul>
+				<p>
+				Please submit the requested information to <a href="mailto:aaron@lendit.co">Aaron Lua</a> as soon as possible.
+				</p>
+			</div>
+
+			<div class="section">
+				<h2>Registration Information</h2>
+				<p>
+					Confirmed Speakers will be registered for all conference activities by a member of the Delegate Affairs Team &mdash; this includes a Speaker Pass to LendIt Europe 2015 and a ticket to the Welcome Party. You will receive an email confirmation of this transaction. If you had already registered for the conference, your registration fee will be refunded.
+				</p>
+			</div>
+
+
+			<div class="section">
+				<h2>Discount Codes</h2>
+				<p>
+					If you would like to bring additional members of your team, please have them use the unique discount code provided to you in the Welcome Email. If your team members have already registered, please let us know and we will apply the discount and issue a refund.
+				</p>
+			</div>
+
+
+			<div class="section">
+				<h2>Other Information</h2>
+				<p>As we get closer to LendIt Europe 2015, a member of the LendIt team will schedule a Panel Planning Call for each of the conference’s panel discussions.</p>
+
+				<p>We will also notify you by email and post here the suggested specs for keynotes, company demos and special presentations.</p>
+			</div>
+
+			<div class="section">
+				<h2>General Conference Details</h2>
+				<h5>Conference Dates and Location: </h5>
 				<div>
-					20-21 October<br />
-					Hilton London Metropole<br />
-					225 Edgware Road, London, W21Ju, United Kingdom<br />
-					+44-207-402-4141<br />
+					20-21 October, 2015<br />
+					Hilton London Metropole<br>
+					225 Edgware Road, London, W21Ju, United Kingdom<br>+44-207-402-4141
 				</div>
 			</div>
 
@@ -49,62 +82,29 @@
 				</div>
 			</div>
 
+
 			<div class="section">
-				<h2>Registration Information</h2>
+				<h2>Travel and Hotel Accommodations</h2>
 				<p>
-					All speakers will be registered for all conference activities by a member of the Delegate Affairs Team &mdash; this is includes a speaker pass to LendIt Europe 2015 and a ticket to the Welcome Party. You will receive an email confirmation of this transaction shortly if you have not already received. If you had already registered for the conference, your registration fee will be refunded.
+					Speakers are responsible for booking their own travel and accommodations. LendIt has a hotel block reserved at the Hilton London Metropole from 18 October-22 October. <a href="http://www.hilton.com/en/hi/groups/personalized/L/LONMETW-GLEND-20151018/index.jhtml?WT.mc_id=POG" target="_blank">Book your hotel</a> before 18th September to receive our special rate.
 				</p>
 			</div>
 
-			<div class="section">
-				<h2>Discount Codes</h2>
-				<p>
-					If you would like to bring additional members of your team, please have them use the unique discount code provided to you in the Welcome Email. If your team members have already registered, please let us know and we will apply the discount and issue a refund.
-				</p>
-			</div>
 
-			<div class="section">
-				<h2>Travel and Hotel Information</h2>
-				<p>
-					Speakers are responsible for booking their own travel and accommodations. LendIt has a hotel block reserved at the Hilton London Metropole from 18 October-22 October. Book your hotel here (insert link) before 18th September to receive our special rate.
-				</p>
-			</div>
-
-			<div class="section">
-				<h2>Bio and Headshot</h2>
-				<ul>
-					<li>Your bio: 100 words or less, please include your full name, company, and title</li>
-					<li>Your headshot: high-resolution, print-quality JPEG - 4”x6” or larger at 300 dpi</li>
-					<li>Your mobile number</li>
-					<li>Your company’s Twitter handle</li>
-					<li>Your Twitter handle</li>
-				</ul>
-				<p>
-				Please submit the requested information to Aaron Lua (aaron@lendit.co) as soon as possible.
-			</p>
-			</div>
-
-
-
-      <h2>Other Information</h2>
-			<p>
-				As we get closer to LendIt Europe 2015, a member of the LendIt team will schedule a Panel Planning Call for each of the conference’s panel discussions.
-			</p>
-
-			<p>
-				We will also notify you by email and post here the suggested presentation specs for keynotes, company demos etc.
-			</p>
 			<div class="section">
 				<h2>Contact Us!</h2>
 				<ul>
 					<li>
-						Lisa Jones, Director of Delegate Affairs - <a href="mailto:lisa@lendit.co">lisa@lendit.co</a>
+						<a href="mailto:lisa@lendit.co">Lisa Jones, Director of Delegate Affairs - lisa@lendit.co</a>
 					</li>
 					<li>
-						Aaron Lua, Delegate Affairs Team - <a href="mailto:aaron@lendit.co">aaron@lendit.co</a>
+						<a href="mailto:aaron@lendit.co">Aaron Lua, Delegate Affairs Team - aaron@lendit.co</a>
 					</li>
 					<li>
-						Nora Steinman, Operations and Communications Manager - <a href="mailto:nora@lendit.co">nora@lendit.co</a>
+						<a href="mailto:nora@lendit.co">Nora Steinman, Operations and Communications Manager - nora@lendit.co</a>
+					</li>
+					<li>
+						<a href="mailto:bladimir@lendit.co">Bladimir Estevez, Sponsorship and Group Sales Manager - bladimir@lendit.co</a>
 					</li>
 				</ul>
 			</div>
