updated meta description for eu15 speakers info page

--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -1,5 +1,5 @@
 <%= title "LendIt Europe 2015 Speakers Page" %>
-<% meta_description "LendIt Europe 2015 Conference speakers are esteemed European leaders in the peer-to-peer industry." %>
+<% meta_description "LendIt Europe 2015 Conference speakers are esteemed European leaders in the peer-to-peer industry. This is a general guide for our speakers." %>
 <% meta_keywords "p2p, online lending, peer-to-peer, LendIt, speakers, presenters, Europe" %>
 <% body_class "eu15-speakers-info" %>
 
