updated eu15 view to render platinum sponsors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' tgype='text/css'>
 
-
+		<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 
 		<link rel="stylesheet" type="text/css" href="http://cloud.typography.com/7219312/623924/css/fonts.css" />
 		<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
