I styled the Sched.org agenda

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,5 +59,6 @@
 @import "_agendas/china15-agenda";
 @import "_agendas/china15-agenda-bund";
 @import "_agendas/china15-agenda-app";
+@import "_agendas/europe2015";
 @import "_general/important";
 
