--- a/app/assets/stylesheets/_agendas/_europe2015.scss
+++ b/app/assets/stylesheets/_agendas/_europe2015.scss
@@ -1,6 +1,10 @@
 
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300italic,300,400italic,700,700italic);
 
+.general-background {
+
+	min-height: 800px;
+}
 .agenda-europe2015 {
 
 
