updated jobs index to include jobs developer removed vp of finance position

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,11 +9,11 @@
       <ul>
 				<li>
 					<h2>
-						<a href="/jobs/vp-finance">
-							VP of Finance
+						<a href="/jobs/salesforce-developer">
+							Salesforce Developer
 						</a>
 					</h2>
-					<p>The successful candidate will provide leadership and coordination of company financial planning, cash management, budget management, and financial forecasting functions as well as ensure company accounting procedures and reporting conform to generally accepted accounting principles.
+					<p>The successful candidate will be responsible for designing, creating, optimizing our Salesforce database functionality. You will be working closely with a web developer to create integrations between our website’s CMS and Salesforce.
 					</p>
 				</li>
 
