updated content manager to speaker manager

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -19,8 +19,8 @@
 
         <li>
           <h2>
-            <a href="/jobs/content-manager">
-              Event Content Manager
+            <a href="/jobs/speaker-manager">
+              Speaker Manager
             </a>
           </h2>
           <p>LendIt, the definitive annual event for the rapidly growing online lending industry is hiring a full-time content manager to support the development of LendIt’s event programs and blog - through speaker acquisition, market research and relationship building.
