--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,6 @@
 <%= title "LendIt Jobs Page - Peer-to-Peer & Online Lending Conference jobs" %>
-<% meta_description "LendIt Conference helps you learn, network, and connect with top internet finance leaders in China. Register now to reserve your spot and get the best rates. Join our growing LendIt team in producing the largest online lending conference in the world." %>
-<% meta_keywords "p2p, online lending, peer-to-peer, LendIt, speakers, LendIt Conference" %>
+<% meta_description "LendIt Conference helps you learn, network, and connect with top internet finance leaders in the U.S., Europe and China." %>
+<% meta_keywords "jobs, p2p, online lending, peer-to-peer, LendIt, speakers, LendIt Conference" %>
 <% body_class "pg-jobs pg-jobs-main" %>
 <div class="general-background">
   <div class="row">
