updated usa15 callout and removed from: the following usa15 pages: attendees usa15 beijing invite update usa15 beijing invite floorplan speakers sponsors networking

--- a/app/views/conferences/usa15.html.erb
+++ b/app/views/conferences/usa15.html.erb
@@ -3,7 +3,7 @@
 <% meta_keywords "p2p, online lending, peer-to-peer, LendIt Europe" %>
 <% body_class "conference-usa15" %>
 <div class="general-background">
-	<%= render "/welcome/callout" %>
+	<%= render "/welcome/usa15_callout" %>
 	<div class="hero">
 		<div class="hero-inner">
 			<div class="hero-content">
