--- a/app/views/welcome/_usa15_callout.html.erb
+++ b/app/views/welcome/_usa15_callout.html.erb
@@ -3,7 +3,7 @@
   <div class="important-callout-inner">
 		<div class="important-callout-container">
 			<div>
-				<a href="/agenda"><i class="fa fa-arrow-circle-right"></i> View the LendIt USA 2015 Agenda</a>
+				<a href="/usa/2015/agenda"><i class="fa fa-arrow-circle-right"></i> View the LendIt USA 2015 Agenda</a>
 
 			</div>
 			<div>
