created partial for agenda callout

--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -3,6 +3,14 @@
 <% meta_keywords "p2p, online lending, peer-to-peer, LendIt Europe" %>
 <% body_class "europe-2015" %>
 <div class="general-background">
+
+
+<!-- CALL OUT BANNER BEGINS  -->
+
+<%= render "eu15_callout" %>
+<!-- CALL OUT BANNER ENDS -->
+
+
 	<div class="hero">
 		<div class="hero-inner">
 			<div class="hero-content">
