--- a/app/views/conferences/_eu15_callout.html.erb
+++ b/app/views/conferences/_eu15_callout.html.erb
@@ -6,8 +6,8 @@
         <a href="/europe/2015/agenda"><i class="fa fa-arrow-circle-right"></i> View Preliminary Agenda</a>
 
       </div>
-      <div style="display: none;">
-        <a href="https://s3-us-west-2.amazonaws.com/lendit/uploads/usa-2015/LND-USA-show-guide.pdf" class="orange" target="_blank"><i class="fa fa-download"></i> Download Conference Guide </a>
+      <div>
+        <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/conference-brochure.pdf" class="orange" target="_blank"><i class="fa fa-download"></i> Download Conference Brochure </a>
       </div>
     </div>
 
