removed fico webinar box and added video recaps

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -98,17 +98,19 @@
 								</div>
 							</div>
 						</div>
-						<!--
+
+
+					</div>
+				</div>
+				<div class="columns large-9 ">
+
 						<div class="homepage-recap-area">
 							<div class="homepage-recap">
 								<a href="/videos" target="_blank"><b>View Recaps</b></a>
 							</div>
 						</div>
-						-->
-					</div>
-				</div>
-				<div class="columns large-9 ">
-					<div class="temp-fico-webinar-area">
+
+					<div class="temp-fico-webinar-area" style="display: none;">
 						<a class="temp-fico-webinar" href="https://www.virtualvenues.com/FICO/FICO_credit_boot_camp_series_lendit.html" target="_blank">
 							<div class="image-text-container">
 								<div class="image-area">
