updated aaron lua title

--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -98,7 +98,7 @@
 						<a href="mailto:lisa@lendit.co">Lisa Jones, Director of Delegate Affairs - lisa@lendit.co</a>
 					</li>
 					<li>
-						<a href="mailto:aaron@lendit.co">Aaron Lua, Delegate Affairs Team - aaron@lendit.co</a>
+						<a href="mailto:aaron@lendit.co">Aaron Lua, Delegate Affairs Associate - aaron@lendit.co</a>
 					</li>
 					<li>
 						<a href="mailto:nora@lendit.co">Nora Steinman, Operations and Communications Manager - nora@lendit.co</a>
