updated margins around graphic for ad specs

--- a/app/views/sponsors/eu15_sponsors_guide.html.erb
+++ b/app/views/sponsors/eu15_sponsors_guide.html.erb
@@ -66,15 +66,15 @@
 
         <h5>Company Advert Specs for Show Guide</h5>
 
-        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 15px;">
+        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 1.5em;">
           <img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/a4.jpg">
           <div align="center">
-            <span style="color: #89be2e; font-size: 1.5em;">FULL PAGE</span><br />
+            <span style="color: #89be2e; font-size: 1.5em; padding: 1.5em;">FULL PAGE</span><br />
             TRIM SIZE: 8.27" (210mm) width x 11.69" (297mm) height
           </div>
         </div>
 
-        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 15px;">
+        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 1.5em;">
           <img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/half-page.jpg">
           <div align="center">
             <span style="color: #89be2e; font-size: 1.5em;">HALF PAGE</span><br />
@@ -82,7 +82,7 @@
           </div>
         </div>
 
-        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 15px;">
+        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 1.5em;">
           <img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/quarter-page.jpg">
           <div align="center">
             <span style="color: #89be2e; font-size: 1.5em;">QUARTER PAGE</span><br />
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-        <div class="section">
+        <div class="section" style="margin-top: 1.5em;">
         <p>
           All adverts should be saved as either high-resolution (300 dpi), print-quality PDF or EPS in CMYK. Include the name of company in file name. <span style="font-weight: bold;">Ads received after 18th September cannot be guaranteed inclusion in the show guide.</span>
           <ul>
