updated sponsors guide ads

--- a/app/views/sponsors/eu15_sponsors_guide.html.erb
+++ b/app/views/sponsors/eu15_sponsors_guide.html.erb
@@ -34,7 +34,7 @@
           <li>Your website</li>
         </ul>
         <p>
-        Please submit the requested information to <a href="mailto:aaron@lendit.co">Aaron Lua</a> as soon as possible.
+          Please submit the requested information to <a href="mailto:aaron@lendit.co">Aaron Lua</a> as soon as possible.
         </p>
         <p>
           All company logos and descriptions must be received by 18th September to guarantee inclusion in print materials and on conference signage.
@@ -58,23 +58,24 @@
           Depending on your sponsorship level and the terms of your agreement, your sponsorship package may include the following inventory:
         </p>
 
-        <h5>Exhibitor Booths & On-site Branding</h5>
+        <h5>On-site Branding, Exhibition Booths, Content & Show Guide Ads</h5>
         <ul>
-          <li>All arrangements for your booth including design, installation, and AV rentals should be coordinated directly with Experience. For information review the exhibitor manual here</li>
-          <li>On-site branding… [provide instructions here]</li>
+          <li><strong>Exhibition: </strong>All arrangements for your booth including shipping, design, installation, and AV should be coordinated directly with Experience. Please review the exhibitor manual here [link to Experience Exhibitor Manual] for more detailed information including set up and break down times as well as key deadlines.  </li>
+          <li><strong>On-site branding: </strong>All sponsors with special on-site branding elements included in their sponsorship packages are required to must submit artwork to Experience no later October 7th. Experience will be contacting you directly to clarify the specs for your artwork.</li>
+          <li><strong>Guest Blog or White Paper Posting: </strong>If your sponsorship package includes a guest blog post or white paper a member of the LendIt team will contact you to confirm the topic and due date for your content. Content will be shared in the weeks leading up to the conference through LendIt's blogs, newsletters and social media channels. Topics require pre-approval by LendIt. All questions about content should be directed to <a href="mailto:nora@lendit.co">Nora Steinman, nora@lendit.co.</a></li>
+          <li><strong>Company Adverts for Show Guide: </strong>Title, Platinum and Gold sponsorship packages only include company adverts. Please check your sponsorship agreement for more details. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/showguide-ad-specs.pdf" target="_blank">show guide advert spec sheet here</a> for detailed instructions. All ads must be sent to <a href="mailto:nora@lendit.co">Nora Steinman, nora@lendit.co</a> before 18th September.
+          </li>
         </ul>
 
-        <h5>Company Advert Specs for Show Guide</h5>
-
-        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 1.5em;">
+        <div class="columns small-24 medium-8 large-8" style="margin: 1.5em 0;">
           <img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/a4.jpg">
           <div align="center">
-            <span style="color: #89be2e; font-size: 1.5em; padding: 1.5em;">FULL PAGE</span><br />
+            <span style="color: #89be2e; font-size: 1.5em;">FULL PAGE</span><br />
             TRIM SIZE: 8.27" (210mm) width x 11.69" (297mm) height
           </div>
         </div>
 
-        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 1.5em;">
+        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 15px;">
           <img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/half-page.jpg">
           <div align="center">
             <span style="color: #89be2e; font-size: 1.5em;">HALF PAGE</span><br />
@@ -82,7 +83,7 @@
           </div>
         </div>
 
-        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 1.5em;">
+        <div class="columns small-24 medium-8 large-8" style="margin-top: 1.5em; margin-bottom: 15px;">
           <img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/quarter-page.jpg">
           <div align="center">
             <span style="color: #89be2e; font-size: 1.5em;">QUARTER PAGE</span><br />
@@ -91,35 +92,9 @@
         </div>
       </div>
 
-        <div class="section" style="margin-top: 1.5em;">
-        <p>
-          All adverts should be saved as either high-resolution (300 dpi), print-quality PDF or EPS in CMYK. Include the name of company in file name. <span style="font-weight: bold;">Ads received after 18th September cannot be guaranteed inclusion in the show guide.</span>
-          <ul>
-            <li><strong>Full page: </strong>Ad TRIM size is 8.27" (210mm) width x 11.69" (297mm) height (A4) BLEED should be .125" (3.175mm) and SAFETY is .25" (6.35mm)</li>
-            <li><strong>Half page: </strong>Ad TRIM size is 8.27" (210mm) width x 5.85” (148.6mm) height BLEED should be .125" (3.175mm) and SAFETY is .25" (6.35mm)</li>
-            <li><strong>Quarter page: </strong>Ad TRIM size is 4.135” (105mm) width x 5.85” (148.6mm) height BLEED should be .125" (3.175mm) and SAFETY is .25" (6.35mm)</li>
-          </ul>
-        </p>
-        </div>
-
-        <div>
-        <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/showguide-ad-specs.pdf" target="_blank"><button>Download PDF for reference</button></a>
-        </div>
-
-        <p>
-          Please send all ads to <a href="mailto:nora@lendit.co">Nora Steinman, nora@lendit.co</a> before 18th September.
-        </p>
-
-        <h5>Guest Blog or White Paper Posting</h5>
-        <p>
-          LendIt will share a guest post or a white paper on our blog in the weeks leading up to LendIt Europe 2015. A link to your post will also be shared on our social media accounts and in an email. Topics require pre-approval by LendIt. All questions about blog posts should be directed to <a href="mailto:nora@lendit.co">Nora Steinman, nora@lendit.co</a>.
-        </p>
-
-        <h5>Company Demos</h5>
-        <p>We are currently working on the company demo time slots. A member of our team will be in touch soon to coordinate with you. Stay tuned for further details.</p>
       </div>
 
-      <div class="section">
+      <div class="section" style="margin-top: 20px;">
         <h2>General Conference Details</h2>
         <h5>Conference Dates and Location</h5>
         <div>
@@ -128,7 +103,6 @@
           225 Edgware Road, London, W2 1JU, United Kingdom<br />
           <a href="tel:44-207-402-4141">+44-207-402-4141</a>
         </div>
-
         <h5>Welcome Party Date and Location</h5>
         <div>
           19 October, Time TBD<br />
@@ -138,37 +112,39 @@
       </div>
 
 
-      <div class="section">
-        <h2>Travel and Hotel Accommodations</h2>
-        <p>
-          Sponsors are responsible for booking their own travel and accommodations. LendIt has a hotel block reserved at the Hilton London Metropole from 18 October-22 October. <a href="http://www.hilton.com/en/hi/groups/personalized/L/LONMETW-GLEND-20151018/index.jhtml?WT.mc_id=POG" target="_blank">Book your hotel</a> before 18th September to receive our special rate.
-        </p>
-      </div>
 
 
-      <div class="section">
-        <h2>Contact Us!</h2>
-        <ul>
-          <li>
-            <a href="mailto:lisa@lendit.co">Lisa Jones, Director of Delegate Affairs - lisa@lendit.co</a>
-          </li>
-          <li>
-            <a href="mailto:aaron@lendit.co">Aaron Lua, Delegate Affairs Associate - aaron@lendit.co</a>
-          </li>
-          <li>
-            <a href="mailto:nora@lendit.co">Nora Steinman, Operations and Communications Manager - nora@lendit.co</a>
-          </li>
-          <li>
-              <a href="mailto:joy@lendit.co">Joy Schwartz, Vice President of Events - joy@lendit.co</a>
-          </li>
-          <li>
-            <a href="mailto:bladimir@lendit.co">Bladimir Estevez, Sponsorship and Group Sales Manager - bladimir@lendit.co</a>
-          </li>
-        </ul>
-      </div>
-
-
+    <div class="section">
+      <h2>Travel and Hotel Accommodations</h2>
+      <p>
+        Sponsors are responsible for booking their own travel and accommodations. LendIt has a hotel block reserved at the Hilton London Metropole from 18 October-22 October. <a href="http://www.hilton.com/en/hi/groups/personalized/L/LONMETW-GLEND-20151018/index.jhtml?WT.mc_id=POG" target="_blank">Book your hotel</a> before 18th September to receive our special rate.
+      </p>
     </div>
+
+
+    <div class="section">
+      <h2>Contact Us!</h2>
+      <ul>
+        <li>
+          <a href="mailto:lisa@lendit.co">Lisa Jones, Director of Delegate Affairs - lisa@lendit.co</a>
+        </li>
+        <li>
+          <a href="mailto:aaron@lendit.co">Aaron Lua, Delegate Affairs Associate - aaron@lendit.co</a>
+        </li>
+        <li>
+          <a href="mailto:nora@lendit.co">Nora Steinman, Operations and Communications Manager - nora@lendit.co</a>
+        </li>
+        <li>
+          <a href="mailto:joy@lendit.co">Joy Schwartz, Vice President of Events - joy@lendit.co</a>
+        </li>
+        <li>
+          <a href="mailto:bladimir@lendit.co">Bladimir Estevez, Sponsorship and Group Sales Manager - bladimir@lendit.co</a>
+        </li>
+      </ul>
+    </div>
+
+
   </div>
+</div>
 
 </div>
