updated copy for sponsors guide

--- a/app/views/sponsors/eu15_sponsors_guide.html.erb
+++ b/app/views/sponsors/eu15_sponsors_guide.html.erb
@@ -47,7 +47,7 @@
           The primary sponsor contact will register all company sponsor passes using the unique discount code and instructions provided in the Welcome Email from LendIt’s Delegate Affairs Team – this includes registration for both the conference itself (20-21 October) and the Welcome Party (19 October). After each member of your team has been registered, they will receive an email confirmation of this transaction.
         </p>
         <p>
-          We advise registering your team members as soon as possible so they will begin receiving all event-related communications from LendIt including agenda updates and networking information. Registration substitutions can be made if necessary by contacting <a href="mailto:lisa@lendit.co">Lisa Jones (lisa@lendit.co)</a> or <a href="mailto:aaron@lendit.co">Aaron Lua (aaron@lendit.co)</a>.
+          We advise registering your team members as soon as possible so they will begin receiving all event-related communications from LendIt including agenda updates and networking information. Registration substitutions can be made if necessary by contacting <a href="mailto:lisa@lendit.co">Lisa Jones</a> or <a href="mailto:aaron@lendit.co">Aaron Lua</a>.
         </p>
       </div>
 
@@ -62,9 +62,13 @@
         <ul>
           <li><strong>Exhibition: </strong>All arrangements for your booth including shipping, design, installation, and AV should be coordinated directly with Experience. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/exhibitor-manual.pdf" target="_blank">exhibitor manual here</a> for more detailed information including set up and break down times as well as key deadlines.  </li>
           <li><strong>On-site branding: </strong>All sponsors with special on-site branding elements included in their sponsorship packages are required to must submit artwork to Experience no later October 7th. Experience will be contacting you directly to clarify the specs for your artwork.</li>
-          <li><strong>Guest Blog or White Paper Posting: </strong>If your sponsorship package includes a guest blog post or white paper a member of the LendIt team will contact you to confirm the topic and due date for your content. Content will be shared in the weeks leading up to the conference through LendIt's blogs, newsletters and social media channels. Topics require pre-approval by LendIt. All questions about content should be directed to <a href="mailto:nora@lendit.co">Nora Steinman, nora@lendit.co.</a></li>
-          <li><strong>Company Adverts for Show Guide: </strong>Title, Platinum and Gold sponsorship packages only include company adverts. Please check your sponsorship agreement for more details. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/showguide-ad-specs.pdf" target="_blank">show guide advert spec sheet here</a> for detailed instructions. All ads must be sent to <a href="mailto:nora@lendit.co">Nora Steinman, nora@lendit.co</a> before 18th September.
+          <li><strong>Guest Blog or White Paper Posting: </strong>If your sponsorship package includes a guest blog post or white paper a member of the LendIt team will contact you to confirm the topic and due date for your content. Content will be shared in the weeks leading up to the conference through LendIt's blogs, newsletters and social media channels. Topics require pre-approval by LendIt. All questions about content should be directed to <a href="mailto:nora@lendit.co">Nora Steinman.</a></li>
+          <li><strong>Company Adverts for Show Guide: </strong>Please check your sponsorship agreement for more details. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/showguide-ad-specs.pdf" target="_blank">show guide advert spec sheet here</a> for detailed instructions. All ads must be sent to <a href="mailto:nora@lendit.co">Nora Steinman</a> before 18th September.
           </li>
+          <p style="font-style: italic;">
+            Advertising material will be accepted as high-resolution (300dpi), print-quality PDFs or EPSs in CMYK.
+          </p>
+
         </ul>
 
         <div class="columns small-24 medium-8 large-8" style="margin: 1.5em 0;">
@@ -91,6 +95,8 @@
           </div>
         </div>
       </div>
+
+
 
       </div>
 
