added registered delegates companies list

--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -60,7 +60,8 @@
 				<h2>Other Information</h2>
 				<p>As we get closer to LendIt Europe 2015, a member of the LendIt team will schedule a Panel Planning Call for each of the conference’s panel discussions.</p>
 
-				<p>We will also notify you by email and post here the suggested specs for keynotes, company demos and special presentations.</p>
+				<p>Presentations
+				</p>
 			</div>
 
 			<div class="section">
