--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -287,6 +287,7 @@
 			<div class="row conf-callouts" data-equalizer="callouts" >
 				<div class="columns small-24 medium-8 large-8">
 					<div class="panel" data-equalizer-watch="callouts">
+
 						<div class="conf-callout-hd">Attendee Growth</div>
 						<div class="conf-callout-object">
 							<img src="https://s3-us-west-2.amazonaws.com/lendit/conferences/europe-2015/europe-2015-callout-attendance.png" />
@@ -295,10 +296,12 @@
 				</div>
 				<div class="columns small-24 medium-8 large-8">
 					<div class="panel" data-equalizer-watch="callouts">
-						<div class="conf-callout-hd"> 2014 Audience Breakdown </div>
+						<a href="europe/2015/attendees" class="conf-callout-map">
+						<div class="conf-callout-hd"> 2015 Audience Breakdown <i class="fa fa-arrow-circle-right"></i></div>
 						<div class="conf-callout-object">
-							<img src="https://s3-us-west-2.amazonaws.com/lendit/conferences/europe-2015/europe-2015-callout-audience.png" />
+							<img src="https://s3-us-west-2.amazonaws.com/lendit/audience-breakdown" />
 						</div>
+					</a>
 					</div>
 				</div>
 				<div class="columns small-24 medium-8 large-8" >
