--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -297,7 +297,7 @@
 				<div class="columns small-24 medium-8 large-8">
 					<div class="panel" data-equalizer-watch="callouts">
 						<a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/registered-companies-082715.pdf" class="conf-callout-map" target="_blank">
-						<div class="conf-callout-hd"> 2015 Audience Breakdown <i class="fa fa-arrow-circle-right"></i></div>
+						<div class="conf-callout-hd"> Attending Companies <i class="fa fa-arrow-circle-right"></i></div>
 						<div class="conf-callout-object">
 							<img src="https://s3-us-west-2.amazonaws.com/lendit/audience-breakdown" />
 						</div>
