updated john goodall to be featured on the europe 2015 page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -82,7 +82,10 @@
 					<div class="homepage-container2">
 						<div class="homepage-main-text">
 							<h1>
-								LendIt is about connecting the global online lending community.
+								<!-- LendIt is about connecting the global online lending community. -->
+								<!-- Connecting the global online lending community -->
+								<!-- LendIt connects the global online lending community -->
+								Connect with the global online lending community
 							</h1>
 							<div class="body-copy">
 								<p>
