updated sponsors guide page to direct people to blad

--- a/app/views/sponsors/eu15_sponsors_guide.html.erb
+++ b/app/views/sponsors/eu15_sponsors_guide.html.erb
@@ -34,7 +34,7 @@
           <li>Your website</li>
         </ul>
         <p>
-          Please submit the requested information to <a href="mailto:aaron@lendit.co">Aaron Lua</a> as soon as possible.
+          Please submit the requested information to <a href="mailto:bladimir@lendit.co">Bladimir Estevez</a> as soon as possible.
         </p>
         <p>
           All company logos and descriptions must be received by 18th September to guarantee inclusion in print materials and on conference signage.
