--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -17,7 +17,9 @@
 						</b>
 						<i>
 							Conference Chairman
+							@lendacademy
 						</i>
+						@lendacademy
 					</div>
 				</li>
 				<li>
