bolded deadlines for sponsors guide

--- a/app/views/sponsors/eu15_sponsors_guide.html.erb
+++ b/app/views/sponsors/eu15_sponsors_guide.html.erb
@@ -37,7 +37,7 @@
           Please submit the requested information to <a href="mailto:bladimir@lendit.co">Bladimir Estevez</a> as soon as possible.
         </p>
         <p>
-          All company logos and descriptions must be received by 18th September to guarantee inclusion in print materials and on conference signage.
+          <strong>All company logos and descriptions must be received by 18th September</strong> to guarantee inclusion in print materials and on conference signage.
         </p>
       </div>
 
@@ -61,9 +61,9 @@
         <h5>On-site Branding, Exhibition Booths, Content & Show Guide Ads</h5>
         <ul>
           <li><strong>Exhibition: </strong>All arrangements for your booth including shipping, design, installation, and AV should be coordinated directly with Experience. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/exhibitor-manual.pdf" target="_blank">exhibitor manual here</a> for more detailed information including set up and break down times as well as key deadlines.  </li>
-          <li><strong>On-site branding: </strong>All sponsors with special on-site branding elements included in their sponsorship packages are required to must submit artwork to Experience no later October 7th. Experience will be contacting you directly to clarify the specs for your artwork.</li>
+          <li><strong>On-site branding: </strong>All sponsors with special on-site branding elements included in their sponsorship packages are required to must <strong>submit artwork to Experience no later October 7th. Experience will be contacting you directly to clarify the specs for your artwork.</strong></li>
           <li><strong>Guest Blog or White Paper Posting: </strong>If your sponsorship package includes a guest blog post or white paper a member of the LendIt team will contact you to confirm the topic and due date for your content. Content will be shared in the weeks leading up to the conference through LendIt's blogs, newsletters and social media channels. Topics require pre-approval by LendIt. All questions about content should be directed to <a href="mailto:nora@lendit.co">Nora Steinman.</a></li>
-          <li><strong>Company Adverts for Show Guide: </strong>Please check your sponsorship agreement for more details. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/showguide-ad-specs.pdf" target="_blank">show guide advert spec sheet here</a> for detailed instructions. All ads must be sent to <a href="mailto:nora@lendit.co">Nora Steinman</a> before 18th September.
+          <li><strong>Company Adverts for Show Guide: </strong>Please check your sponsorship agreement for more details. Please review the <a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/showguide-ad-specs.pdf" target="_blank">show guide advert spec sheet here</a> for detailed instructions. <strong>All ads must be sent to <a href="mailto:nora@lendit.co">Nora Steinman</a> before 18th September.</strong>
           </li>
           <p style="font-style: italic;">
             Advertising material will be accepted as high-resolution (300dpi), print-quality PDFs or EPSs in CMYK.
@@ -123,7 +123,7 @@
     <div class="section">
       <h2>Travel and Hotel Accommodations</h2>
       <p>
-        Sponsors are responsible for booking their own travel and accommodations. LendIt has a hotel block reserved at the Hilton London Metropole from 18 October-22 October. <a href="http://www.hilton.com/en/hi/groups/personalized/L/LONMETW-GLEND-20151018/index.jhtml?WT.mc_id=POG" target="_blank">Book your hotel</a> before 18th September to receive our special rate.
+        Sponsors are responsible for booking their own travel and accommodations. LendIt has a hotel block reserved at the Hilton London Metropole from 18 October-22 October. <strong><a href="http://www.hilton.com/en/hi/groups/personalized/L/LONMETW-GLEND-20151018/index.jhtml?WT.mc_id=POG" target="_blank">Book your hotel</a> before 18th September to receive our special rate.</strong>
       </p>
     </div>
 
