updated sponsors guide

--- a/app/views/sponsors/eu15_sponsors_guide.html.erb
+++ b/app/views/sponsors/eu15_sponsors_guide.html.erb
@@ -44,7 +44,7 @@
       <div class="section">
         <h2>Registration Information</h2>
         <p>
-          The primary sponsor contact will register all company sponsor passes using the unique discount code and instructions provided in the Welcome Email from LendIt’s Delegate Affairs Team – this includes registration for both the conference itself (20-21 October) and the Welcome Party (19 October). After each member of your team has been registered, they will receive an email confirmation of this transaction.
+           The primary sponsor contact will register all company sponsor passes using the unique discount code and instructions provided in the Welcome Email – this includes registration for both the conference itself (20-21 October) and the Welcome Party (19 October). After each member of your team has been registered, they will receive an email confirmation of this transaction.
         </p>
         <p>
           We advise registering your team members as soon as possible so they will begin receiving all event-related communications from LendIt including agenda updates and networking information. Registration substitutions can be made if necessary by contacting <a href="mailto:lisa@lendit.co">Lisa Jones</a> or <a href="mailto:aaron@lendit.co">Aaron Lua</a>.
