I am testing on /home and working inside of landing nav; and I created a prototype in landing nav that needs some dynamic toggling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,4 +61,5 @@
 @import "_agendas/china15-agenda-app";
 @import "_agendas/europe2015";
 @import "_general/important";
+@import "_general/redesign";
 
