I removed the temporary logo image from the assets folder

--- a/app/views/layouts/_landingnav.html.erb
+++ b/app/views/layouts/_landingnav.html.erb
@@ -5,7 +5,7 @@
 			</div>
 			<div class="anav-middle">
 				<a href="" class="anav-logo">
-					<img src="assets/redesign-lendit-logo.png" />
+					<img src="https://s3-us-west-2.amazonaws.com/lendit/temporary-for-redesign/redesign-lendit-logo.png" />
 				</a>
 			</div>
 			<div class="anav-right">
@@ -52,7 +52,7 @@
 				going for. 
 
 				-->
-				<li class="bnav-logo"><a href=""> <img src="assets/redesign-lendit-logo.png" class="logo" /> </a></li>
+				<li class="bnav-logo"><a href=""> <img src="https://s3-us-west-2.amazonaws.com/lendit/temporary-for-redesign/redesign-lendit-logo.png" class="logo" /> </a></li>
 				<li class="is-active"><a href="">USA </a><span>USA</span></li>
 				<li><a href="">Europe </a><span>Europe</span></li>
 				<li><a href="">China </a><span>China</span></li>
