--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -5,18 +5,18 @@
 
 <div class="general-background" >
 
-  <div class="row">
-    <div class="columns">
-      <section class="speakers-intro">
-        <div class="speakers-intro-left">
-          <h1>LendIt Europe 2015 Speakers Guide</h1>
-        </div>
-      </section>
-    </div>
-  </div>
+	<div class="row">
+		<div class="columns">
+			<section class="speakers-intro">
+				<div class="speakers-intro-left">
+					<h1>LendIt Europe 2015 Speakers Guide</h1>
+				</div>
+			</section>
+		</div>
+	</div>
 
-  <div class="row">
-    <div class="columns">
+	<div class="row">
+		<div class="columns">
 			<div class="section">
 				<p>
 					Thank you for agreeing to participate as a speaker at <a href="/europe/2015">LendIt Europe 2015</a>. We have created this Speaker Information page to provide you with details and instructions to help you prepare for the conference. We will be updating this page with additional information as we get closer to the event; you will be notified by email when we make any changes.
@@ -36,7 +36,7 @@
 					<li>Your personal Twitter handle</li>
 				</ul>
 				<p>
-				Please submit the requested information to <a href="mailto:aaron@lendit.co">Aaron Lua</a> as soon as possible.
+					Please submit the requested information to <a href="mailto:aaron@lendit.co">Aaron Lua</a> as soon as possible.
 				</p>
 			</div>
 
@@ -60,8 +60,15 @@
 				<h2>Other Information</h2>
 				<p>As we get closer to LendIt Europe 2015, a member of the LendIt team will schedule a Panel Planning Call for each of the conference’s panel discussions.</p>
 
-				<p>Presentations
-				</p>
+			</div>
+
+			<div class="section">
+				<h2>Presentations</h2>
+				<p><strong>Format:</strong> PowerPoint 16 x 9<br></p>
+				<p><strong>Deadline:</strong> Final presentations to be sent to <a href="mailto:aaron@lendit.co">aaron@lendit.co</a> by 5PM EST on October 15th. In the event last minute changes have been made to your presentation, bring your presentation to the event on a thumb drive and hand the drive to Aaron or Lisa during check-in.</p>
+				<p><strong>Time allotment:</strong> Stick to the allotted time assigned to you (or the chairman will have no choice but to politely cut you off). Leave time for Q&A (often it is the best part!). If your presentation allotment is 30 min, we suggest you leave 10 minutes for Q&A.</p>
+				<p><strong>Taking the stage:</strong> Please approach the AV desk in the back of your presentation room at least 30 minutes prior to your presentation start time so your mic can be placed and tested. Once your mic has been placed, stay in the conference room and sit in one of the front rows close to the stage to ensure a smooth transition between presentations. (No one likes to make a mad dash to the stage). If you wish to perform a test run of your presentation on stage please notify Aaron by October 12th.</p>
+				<p><strong>Other:</strong> Do not jam too many data points or text per a slide as they are often hard to see from the back of the ballroom.</p>
 			</div>
 
 			<div class="section">
@@ -111,7 +118,7 @@
 			</div>
 
 
-    </div>
-  </div>
+		</div>
+	</div>
 
 </div>
