--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -91,6 +91,19 @@
 				</li>
 				<li>
 					<div class="headshot">
+						<img src="https://s3-us-west-2.amazonaws.com/lendit/team/aaron-lua.psd-th.jpeg" />
+					</div>
+					<div class="name-title">
+						<b>
+							Aaron Lua
+						</b>
+						<i>
+							Delegate Affairs Associate
+						</i>
+					</div>
+				</li>
+				<li>
+					<div class="headshot">
 						<img src="https://s3-us-west-2.amazonaws.com/lendit/team/ryan-lichtenwald.psd-th.jpeg" />
 					</div>
 					<div class="name-title">
